backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: ariyakrishnan/udemy-kube-back:latest
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: back
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
