frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: ariyakrishnan/kube-front:latest
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
